Fixes #189 - Forced footer to align with the bottom of the window when the content within a page doesn't fill the window

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,3 +1,8 @@
+html
+{
+  display: flex;
+}
+
 body
 {
   font-family: "Source Sans Pro", Arial, sans-serif;
@@ -5,12 +10,17 @@ body
   /* Start below fixed navbar */
   padding-top: 4em;
   line-height: 1.5;
+  min-height: 100vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 #content,
 #blog
 {
   padding-bottom: 2em;
+  flex-grow: 1;
 }
 
 a img
